--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,8 @@
     ],
     "require": {
         "monolog/monolog": "^1.22"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "5.5.7"
     }
 }
